--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux": "^5.0.1",
+    "survey-react-ui": "^1.11.11",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
