--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-webcam": "^7.2.0",
     "redux": "^5.0.1",
     "survey-react-ui": "^1.11.11",
     "vite-plugin-svgr": "^4.2.0"
