--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@react-three/drei": "^9.111.2",
+    "@react-three/fiber": "^8.17.5",
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
@@ -23,6 +26,7 @@
     "react-webcam": "^7.2.0",
     "redux": "^5.0.1",
     "survey-react-ui": "^1.11.11",
+    "three": "^0.167.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
