--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.29",
+    "localforage": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
