--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-webcam": "^7.2.0",
@@ -41,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-sitemap": "^0.7.1"
   }
 }
